# rs-axum-template

./: Cargo.toml  Makefile  justfile  tailwind.config.js  test.sh
src/: config.rs  error.rs  main.rs  services.rs
src/models/: user.rs
src/routes/: api.rs
web-src/: index.html
web-src/css/: custom.css  output.css
