[package]
name = "rs-axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["macros", "ws"] }
axum-login = "0.6.0"
clap = { version = "4.3.24", features = ["derive"] }
config = "0.13.3"
dotenvy = "0.15.7"
futures = "0.3.28"
maud = "0.25.0"
serde = { version = "1.0.186", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
